Change Log:

Jan 5, 2008 - Jim Clark
- Down to 8 Type safty warrnings by implemeing various Collection<Type> stuff. The ones that are
   left are because of type casting wierdness that isn't Java best pratices.. but still works. They
   will have to be reimplemented to fix.

Jan 3-4, 2008 - Drew Avis
- Added some tooltips for toolbar buttons
- Added copy to clipboard toolbar button
- Fixed bug where a new hop had Add and Type switched
- You can now set target vol on the carbonation tab
- Tried to get priming sugar amount to re-calculate when you set targetVol on the recipe, but gave up
- Cleaned up some Java 1.6 things (String.isEmpty)
- Made a few changes to reduce compiler warnings (use of raw ArrayList)

Dec 28, 2007 - Jim Clark
- Consolidated a lot of fixed strings scatetred though out app into static strings to
   help prevent fat fingers and what not and to create more readable code. Still more to
   do, especialy in Quantity(), but I got most of them.
- Fixed bug with Salt check boxes not adding/removeing salt from recipe (addActionListner())
- Fixed water calc bug where app was telling user to add salts when they already had the target
   value or higher.
- Fixed shallow copy of Salt out of database into (partial) deep copy
- First run at acidification (needs save/load/print and options)

Dec 27, 2007 - Jim Clark
- Save/load/export added for water profile and salts
- A few bugs with implementation of water treatment cleaned up
- A bug with notes display in xlst fixed 
- Default Water profile in options and prefs dialog
- TODO: allow user to add water profiles without having to manual edit DB files

Dec 25, 2007 - Jim Clark
- Basic structure for Water Treatment and Brewing Salts
  - GUI started
  - Water and salt database implemented
  - Water and salts added to Recipe
  - Basic salt calulations
  - TODO: acid calcs/gui, save/load into xml, xlst printing, options

Dec 20, 2007 - Jim Clark
- Added keg line length to carb panel and options